--- a/lw1/package.json
+++ b/lw1/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack --mode development --watch"
+    "compile": "npx tsc"
   },
   "keywords": [],
   "author": "Potapenko Max",
