--- a/lw/package.json
+++ b/lw/package.json
@@ -10,7 +10,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "typescript": "^5.9.2"
+    "@eslint/js": "^9.35.0",
+    "eslint": "^9.35.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.4.0",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.43.0"
   },
   "engines": {
     "node": "20.8.0"
