--- a/lw/tsconfig.json
+++ b/lw/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
     "target": "ES2016",
-    "lib": ["ES2016", "DOM"]
+    "lib": [
+      "ES2016",
+      "DOM"
+    ]
   }
 }
