--- a/presentation-maker/package.json
+++ b/presentation-maker/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint ."
+    "lint:css": "stylelint \"**/*.css\"",
+    "lint": "eslint . && npm run lint:css",
+    "lint:fix": "eslint . --fix && stylelint \"**/*.css\" --fix && npm run format",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -18,16 +21,14 @@
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
-    "postcss-scss": "^4.0.9",
+    "prettier": "3.6.2",
     "stylelint": "^16.24.0",
-    "stylelint-config-recommended-vue": "^1.6.1",
-    "stylelint-config-standard": "^39.0.0",
-    "stylelint-config-standard-scss": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
