--- a/presentation-maker/package.json
+++ b/presentation-maker/package.json
@@ -12,8 +12,10 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.10.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -34,6 +36,6 @@
     "vite": "^7.1.2"
   },
   "engine": {
-    "node": ""
+    "node": "22.19.0"
   }
 }
