--- a/presentation-maker/package.json
+++ b/presentation-maker/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.1",
+    "appwrite": "^21.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
