--- a/presentation-maker/package.json
+++ b/presentation-maker/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.1",
+    "ajv": "^8.17.1",
     "appwrite": "^21.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
